MICELIO/Micelio.g4
grammar Micelio;

program : sep* (statement sep*)* EOF ;

statement
    : simple_stmt
    | compound_stmt
    ;

simple_stmt
    : var_decl
    | const_decl
    | assignment
    | return_stmt
    | break_stmt
    | continue_stmt
    | import_stmt
    | leer_stmt
    | imp_stmt
    | expr
    ;

compound_stmt
    : if_stmt
    | switch_stmt
    | while_stmt
    | for_stmt
    | func_def
    | block
    ;

var_decl : VAR ID '=' expr ;
const_decl : CONST ID '=' expr ;
assignment : ID '=' expr ;
return_stmt : REGRESA expr? ;
break_stmt : ROMPER ;
continue_stmt : CONTINUAR ;
import_stmt : IMPORTAR STRING (COMO ID)? ;
leer_stmt : LEER ID ;
imp_stmt : IMP expr ;

if_stmt : SI '(' expr ')' block (SINO block)? ;
switch_stmt : SEGUN '(' expr ')' '{' sep* case_block+ '}' ;
case_block
    : CASO expr ':' sep* (statement sep*)*              #caseClause
    | DEFECTO ':' sep* (statement sep*)*                #defaultClause
    ;
while_stmt : MIENTRAS '(' expr ')' block ;
for_stmt
    : PARA ID '=' expr HASTA expr (INC expr)? block
    | PARA ID EN expr block
    ;

func_def : FUNCION ID '(' param_list? ')' block ;
param_list : ID (',' ID)* ;

block : '{' sep* (statement sep*)* '}' ;

expr
    : literal                                                         #literalExpr
    | ID                                                              #idExpr
    | '(' expr ')'                                                    #parenExpr
    | '[' (expr (',' expr)*)? ']'                                     #listExpr
    | SET '(' (expr (',' expr)*)? ')'                                 #setExpr
    | DICT '(' (keyValue (',' keyValue)*)? ')'                        #dictExpr
    | '{' (keyValue (',' keyValue)*)? '}'                             #mapLiteral
    | FUNCION '(' param_list? ')' block                               #anonFuncExpr
    | expr '[' expr ']'                                               #indexExpr
    | expr '(' exprList? ')'                                          #callExpr
    | op=(INC_OP | DEC_OP) expr                                       #preIncDec
    | expr op=(INC_OP | DEC_OP)                                       #postIncDec
    | '-' expr                                                        #unaryMinus
    | NO expr                                                         #notExpr
    | expr op=(MUL | DIV | MOD | DOTMUL) expr                        #mulDivMod
    | expr op=(PLUS | MINUS) expr                                     #addSub
    | expr op=POW expr                                                #powExpr
    | expr op=(EQ | NE | LT | LE | GT | GE) expr                      #comparison
    | expr Y expr                                                     #andExpr
    | expr O expr                                                     #orExpr
    | expr IN expr                                                    #inExpr
    | expr PIPE expr                                                  #pipeExpr
    | expr '.' ID                                                     #memberAccess
    ;

keyValue : expr ':' expr ;
exprList : expr (',' expr)* ;

literal : NUMBER | STRING | BOOL | NULL ;

sep : ';' | NEWLINE+ ;

VAR : 'var' ;
CONST : 'const' ;
FUNCION : 'funcion' ;
REGRESA : 'regresa' ;
SI : 'si' ;
SINO : 'sino' ;
SEGUN : 'segun' ;
CASO : 'caso' ;
DEFECTO : 'defecto' ;
PARA : 'para' ;
HASTA : 'hasta' ;
INC : 'inc' ;
EN : 'en' ;
MIENTRAS : 'mientras' ;
ROMPER : 'romper' ;
CONTINUAR : 'continuar' ;
LEER : 'leer' ;
IMP : 'imp' ;
IMPORTAR : 'importar' ;
COMO : 'como' ;
SET : 'set' ;
DICT : 'dict' ;
BOOL : 'verdadero' | 'falso' ;
NULL : 'nulo' ;
Y : 'y' ;
O : 'o' ;
NO : 'no' ;
IN : 'in' ;
PIPE : '|>' ;
DOTMUL : '.*' ;
INC_OP : '++' ;
DEC_OP : '--' ;

PLUS : '+' ;
MINUS : '-' ;
MUL : '*' ;
DIV : '/' ;
MOD : '%' ;
POW : '**' ;
EQ : '==' ;
NE : '!=' ;
LT : '<' ;
LE : '<=' ;
GT : '>' ;
GE : '>=' ;

NUMBER : [0-9]+ ('.' [0-9]+)? ;
STRING : '"' ( '\\' . | ~["\\] )* '"' | '\'' ( '\\' . | ~['\\] )* '\'' ;
ID : [a-zA-Z_][a-zA-Z0-9_]* ;
COMMENT : '#' ~[\r\n]* -> skip ;
NEWLINE : '\r'? '\n' ;
WS : [ \t]+ -> skip ;
