MICELIO/MicelioParser.py
# Generated from Micelio.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class MicelioParser ( Parser ):

    grammarFileName = "Micelio.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'='", "'('", "')'", "'{'", "'}'", "':'", 
                     "','", "'['", "']'", "'.'", "';'", "'var'", "'const'", 
                     "'funcion'", "'regresa'", "'si'", "'sino'", "'segun'", 
                     "'caso'", "'defecto'", "'para'", "'hasta'", "'inc'", 
                     "'en'", "'mientras'", "'romper'", "'continuar'", "'leer'", 
                     "'imp'", "'importar'", "'como'", "'set'", "'dict'", 
                     "<INVALID>", "'nulo'", "'y'", "'o'", "'no'", "'in'", 
                     "'|>'", "'.*'", "'++'", "'--'", "'+'", "'-'", "'*'", 
                     "'/'", "'%'", "'**'", "'=='", "'!='", "'<'", "'<='", 
                     "'>'", "'>='" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "VAR", "CONST", "FUNCION", "REGRESA", "SI", "SINO", 
                      "SEGUN", "CASO", "DEFECTO", "PARA", "HASTA", "INC", 
                      "EN", "MIENTRAS", "ROMPER", "CONTINUAR", "LEER", "IMP", 
                      "IMPORTAR", "COMO", "SET", "DICT", "BOOL", "NULL", 
                      "Y", "O", "NO", "IN", "PIPE", "DOTMUL", "INC_OP", 
                      "DEC_OP", "PLUS", "MINUS", "MUL", "DIV", "MOD", "POW", 
                      "EQ", "NE", "LT", "LE", "GT", "GE", "NUMBER", "STRING", 
                      "ID", "COMMENT", "NEWLINE", "WS" ]

    RULE_program = 0
    RULE_statement = 1
    RULE_simple_stmt = 2
    RULE_compound_stmt = 3
    RULE_var_decl = 4
    RULE_const_decl = 5
    RULE_assignment = 6
    RULE_return_stmt = 7
    RULE_break_stmt = 8
    RULE_continue_stmt = 9
    RULE_import_stmt = 10
    RULE_leer_stmt = 11
    RULE_imp_stmt = 12
    RULE_if_stmt = 13
    RULE_switch_stmt = 14
    RULE_case_block = 15
    RULE_while_stmt = 16
    RULE_for_stmt = 17
    RULE_func_def = 18
    RULE_param_list = 19
    RULE_block = 20
    RULE_expr = 21
    RULE_keyValue = 22
    RULE_exprList = 23
    RULE_literal = 24
    RULE_sep = 25

    ruleNames =  [ "program", "statement", "simple_stmt", "compound_stmt", 
                   "var_decl", "const_decl", "assignment", "return_stmt", 
                   "break_stmt", "continue_stmt", "import_stmt", "leer_stmt", 
                   "imp_stmt", "if_stmt", "switch_stmt", "case_block", "while_stmt", 
                   "for_stmt", "func_def", "param_list", "block", "expr", 
                   "keyValue", "exprList", "literal", "sep" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    VAR=12
    CONST=13
    FUNCION=14
    REGRESA=15
    SI=16
    SINO=17
    SEGUN=18
    CASO=19
    DEFECTO=20
    PARA=21
    HASTA=22
    INC=23
    EN=24
    MIENTRAS=25
    ROMPER=26
    CONTINUAR=27
    LEER=28
    IMP=29
    IMPORTAR=30
    COMO=31
    SET=32
    DICT=33
    BOOL=34
    NULL=35
    Y=36
    O=37
    NO=38
    IN=39
    PIPE=40
    DOTMUL=41
    INC_OP=42
    DEC_OP=43
    PLUS=44
    MINUS=45
    MUL=46
    DIV=47
    MOD=48
    POW=49
    EQ=50
    NE=51
    LT=52
    LE=53
    GT=54
    GE=55
    NUMBER=56
    STRING=57
    ID=58
    COMMENT=59
    NEWLINE=60
    WS=61

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(MicelioParser.EOF, 0)

        def sep(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MicelioParser.SepContext)
            else:
                return self.getTypedRuleContext(MicelioParser.SepContext,i)


        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MicelioParser.StatementContext)
            else:
                return self.getTypedRuleContext(MicelioParser.StatementContext,i)


        def getRuleIndex(self):
            return MicelioParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = MicelioParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 55
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==11 or _la==60:
                self.state = 52
                self.sep()
                self.state = 57
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 67
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 504451878195949844) != 0):
                self.state = 58
                self.statement()
                self.state = 62
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==11 or _la==60:
                    self.state = 59
                    self.sep()
                    self.state = 64
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 69
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 70
            self.match(MicelioParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def simple_stmt(self):
            return self.getTypedRuleContext(MicelioParser.Simple_stmtContext,0)


        def compound_stmt(self):
            return self.getTypedRuleContext(MicelioParser.Compound_stmtContext,0)


        def getRuleIndex(self):
            return MicelioParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatement" ):
                return visitor.visitStatement(self)
            else:
                return visitor.visitChildren(self)




    def statement(self):

        localctx = MicelioParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_statement)
        try:
            self.state = 74
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 72
                self.simple_stmt()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 73
                self.compound_stmt()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Simple_stmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def var_decl(self):
            return self.getTypedRuleContext(MicelioParser.Var_declContext,0)


        def const_decl(self):
            return self.getTypedRuleContext(MicelioParser.Const_declContext,0)


        def assignment(self):
            return self.getTypedRuleContext(MicelioParser.AssignmentContext,0)


        def return_stmt(self):
            return self.getTypedRuleContext(MicelioParser.Return_stmtContext,0)


        def break_stmt(self):
            return self.getTypedRuleContext(MicelioParser.Break_stmtContext,0)


        def continue_stmt(self):
            return self.getTypedRuleContext(MicelioParser.Continue_stmtContext,0)


        def import_stmt(self):
            return self.getTypedRuleContext(MicelioParser.Import_stmtContext,0)


        def leer_stmt(self):
            return self.getTypedRuleContext(MicelioParser.Leer_stmtContext,0)


        def imp_stmt(self):
            return self.getTypedRuleContext(MicelioParser.Imp_stmtContext,0)


        def expr(self):
            return self.getTypedRuleContext(MicelioParser.ExprContext,0)


        def getRuleIndex(self):
            return MicelioParser.RULE_simple_stmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSimple_stmt" ):
                listener.enterSimple_stmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSimple_stmt" ):
                listener.exitSimple_stmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSimple_stmt" ):
                return visitor.visitSimple_stmt(self)
            else:
                return visitor.visitChildren(self)




    def simple_stmt(self):

        localctx = MicelioParser.Simple_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_simple_stmt)
        try:
            self.state = 86
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 76
                self.var_decl()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 77
                self.const_decl()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 78
                self.assignment()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 79
                self.return_stmt()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 80
                self.break_stmt()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 81
                self.continue_stmt()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 82
                self.import_stmt()
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 83
                self.leer_stmt()
                pass

            elif la_ == 9:
                self.enterOuterAlt(localctx, 9)
                self.state = 84
                self.imp_stmt()
                pass

            elif la_ == 10:
                self.enterOuterAlt(localctx, 10)
                self.state = 85
                self.expr(0)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Compound_stmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def if_stmt(self):
            return self.getTypedRuleContext(MicelioParser.If_stmtContext,0)


        def switch_stmt(self):
            return self.getTypedRuleContext(MicelioParser.Switch_stmtContext,0)


        def while_stmt(self):
            return self.getTypedRuleContext(MicelioParser.While_stmtContext,0)


        def for_stmt(self):
            return self.getTypedRuleContext(MicelioParser.For_stmtContext,0)


        def func_def(self):
            return self.getTypedRuleContext(MicelioParser.Func_defContext,0)


        def block(self):
            return self.getTypedRuleContext(MicelioParser.BlockContext,0)


        def getRuleIndex(self):
            return MicelioParser.RULE_compound_stmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCompound_stmt" ):
                listener.enterCompound_stmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCompound_stmt" ):
                listener.exitCompound_stmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCompound_stmt" ):
                return visitor.visitCompound_stmt(self)
            else:
                return visitor.visitChildren(self)




    def compound_stmt(self):

        localctx = MicelioParser.Compound_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_compound_stmt)
        try:
            self.state = 94
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [16]:
                self.enterOuterAlt(localctx, 1)
                self.state = 88
                self.if_stmt()
                pass
            elif token in [18]:
                self.enterOuterAlt(localctx, 2)
                self.state = 89
                self.switch_stmt()
                pass
            elif token in [25]:
                self.enterOuterAlt(localctx, 3)
                self.state = 90
                self.while_stmt()
                pass
            elif token in [21]:
                self.enterOuterAlt(localctx, 4)
                self.state = 91
                self.for_stmt()
                pass
            elif token in [14]:
                self.enterOuterAlt(localctx, 5)
                self.state = 92
                self.func_def()
                pass
            elif token in [4]:
                self.enterOuterAlt(localctx, 6)
                self.state = 93
                self.block()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Var_declContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VAR(self):
            return self.getToken(MicelioParser.VAR, 0)

        def ID(self):
            return self.getToken(MicelioParser.ID, 0)

        def expr(self):
            return self.getTypedRuleContext(MicelioParser.ExprContext,0)


        def getRuleIndex(self):
            return MicelioParser.RULE_var_decl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVar_decl" ):
                listener.enterVar_decl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVar_decl" ):
                listener.exitVar_decl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVar_decl" ):
                return visitor.visitVar_decl(self)
            else:
                return visitor.visitChildren(self)




    def var_decl(self):

        localctx = MicelioParser.Var_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_var_decl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 96
            self.match(MicelioParser.VAR)
            self.state = 97
            self.match(MicelioParser.ID)
            self.state = 98
            self.match(MicelioParser.T__0)
            self.state = 99
            self.expr(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Const_declContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CONST(self):
            return self.getToken(MicelioParser.CONST, 0)

        def ID(self):
            return self.getToken(MicelioParser.ID, 0)

        def expr(self):
            return self.getTypedRuleContext(MicelioParser.ExprContext,0)


        def getRuleIndex(self):
            return MicelioParser.RULE_const_decl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterConst_decl" ):
                listener.enterConst_decl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitConst_decl" ):
                listener.exitConst_decl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitConst_decl" ):
                return visitor.visitConst_decl(self)
            else:
                return visitor.visitChildren(self)




    def const_decl(self):

        localctx = MicelioParser.Const_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_const_decl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 101
            self.match(MicelioParser.CONST)
            self.state = 102
            self.match(MicelioParser.ID)
            self.state = 103
            self.match(MicelioParser.T__0)
            self.state = 104
            self.expr(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AssignmentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(MicelioParser.ID, 0)

        def expr(self):
            return self.getTypedRuleContext(MicelioParser.ExprContext,0)


        def getRuleIndex(self):
            return MicelioParser.RULE_assignment

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssignment" ):
                listener.enterAssignment(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssignment" ):
                listener.exitAssignment(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAssignment" ):
                return visitor.visitAssignment(self)
            else:
                return visitor.visitChildren(self)




    def assignment(self):

        localctx = MicelioParser.AssignmentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_assignment)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 106
            self.match(MicelioParser.ID)
            self.state = 107
            self.match(MicelioParser.T__0)
            self.state = 108
            self.expr(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Return_stmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def REGRESA(self):
            return self.getToken(MicelioParser.REGRESA, 0)

        def expr(self):
            return self.getTypedRuleContext(MicelioParser.ExprContext,0)


        def getRuleIndex(self):
            return MicelioParser.RULE_return_stmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterReturn_stmt" ):
                listener.enterReturn_stmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitReturn_stmt" ):
                listener.exitReturn_stmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitReturn_stmt" ):
                return visitor.visitReturn_stmt(self)
            else:
                return visitor.visitChildren(self)




    def return_stmt(self):

        localctx = MicelioParser.Return_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_return_stmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 110
            self.match(MicelioParser.REGRESA)
            self.state = 112
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.state = 111
                self.expr(0)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Break_stmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ROMPER(self):
            return self.getToken(MicelioParser.ROMPER, 0)

        def getRuleIndex(self):
            return MicelioParser.RULE_break_stmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBreak_stmt" ):
                listener.enterBreak_stmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBreak_stmt" ):
                listener.exitBreak_stmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBreak_stmt" ):
                return visitor.visitBreak_stmt(self)
            else:
                return visitor.visitChildren(self)




    def break_stmt(self):

        localctx = MicelioParser.Break_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_break_stmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 114
            self.match(MicelioParser.ROMPER)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Continue_stmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CONTINUAR(self):
            return self.getToken(MicelioParser.CONTINUAR, 0)

        def getRuleIndex(self):
            return MicelioParser.RULE_continue_stmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterContinue_stmt" ):
                listener.enterContinue_stmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitContinue_stmt" ):
                listener.exitContinue_stmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitContinue_stmt" ):
                return visitor.visitContinue_stmt(self)
            else:
                return visitor.visitChildren(self)




    def continue_stmt(self):

        localctx = MicelioParser.Continue_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_continue_stmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 116
            self.match(MicelioParser.CONTINUAR)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Import_stmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IMPORTAR(self):
            return self.getToken(MicelioParser.IMPORTAR, 0)

        def STRING(self):
            return self.getToken(MicelioParser.STRING, 0)

        def COMO(self):
            return self.getToken(MicelioParser.COMO, 0)

        def ID(self):
            return self.getToken(MicelioParser.ID, 0)

        def getRuleIndex(self):
            return MicelioParser.RULE_import_stmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterImport_stmt" ):
                listener.enterImport_stmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitImport_stmt" ):
                listener.exitImport_stmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitImport_stmt" ):
                return visitor.visitImport_stmt(self)
            else:
                return visitor.visitChildren(self)




    def import_stmt(self):

        localctx = MicelioParser.Import_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_import_stmt)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 118
            self.match(MicelioParser.IMPORTAR)
            self.state = 119
            self.match(MicelioParser.STRING)
            self.state = 122
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==31:
                self.state = 120
                self.match(MicelioParser.COMO)
                self.state = 121
                self.match(MicelioParser.ID)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Leer_stmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LEER(self):
            return self.getToken(MicelioParser.LEER, 0)

        def ID(self):
            return self.getToken(MicelioParser.ID, 0)

        def getRuleIndex(self):
            return MicelioParser.RULE_leer_stmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLeer_stmt" ):
                listener.enterLeer_stmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLeer_stmt" ):
                listener.exitLeer_stmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLeer_stmt" ):
                return visitor.visitLeer_stmt(self)
            else:
                return visitor.visitChildren(self)




    def leer_stmt(self):

        localctx = MicelioParser.Leer_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_leer_stmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 124
            self.match(MicelioParser.LEER)
            self.state = 125
            self.match(MicelioParser.ID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Imp_stmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IMP(self):
            return self.getToken(MicelioParser.IMP, 0)

        def expr(self):
            return self.getTypedRuleContext(MicelioParser.ExprContext,0)


        def getRuleIndex(self):
            return MicelioParser.RULE_imp_stmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterImp_stmt" ):
                listener.enterImp_stmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitImp_stmt" ):
                listener.exitImp_stmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitImp_stmt" ):
                return visitor.visitImp_stmt(self)
            else:
                return visitor.visitChildren(self)




    def imp_stmt(self):

        localctx = MicelioParser.Imp_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_imp_stmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 127
            self.match(MicelioParser.IMP)
            self.state = 128
            self.expr(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class If_stmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SI(self):
            return self.getToken(MicelioParser.SI, 0)

        def expr(self):
            return self.getTypedRuleContext(MicelioParser.ExprContext,0)


        def block(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MicelioParser.BlockContext)
            else:
                return self.getTypedRuleContext(MicelioParser.BlockContext,i)


        def SINO(self):
            return self.getToken(MicelioParser.SINO, 0)

        def getRuleIndex(self):
            return MicelioParser.RULE_if_stmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIf_stmt" ):
                listener.enterIf_stmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIf_stmt" ):
                listener.exitIf_stmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIf_stmt" ):
                return visitor.visitIf_stmt(self)
            else:
                return visitor.visitChildren(self)




    def if_stmt(self):
